# enkastela

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: bench.yml  ci.yml  security.yml
benches/: blind_index.rs  concurrent.rs  crypto_primitives.rs  field_encryption.rs  key_cache.rs
crates/enkastela/: Cargo.toml
crates/enkastela-cli/: Cargo.toml
crates/enkastela-cli/src/: main.rs
crates/enkastela-derive/: Cargo.toml
crates/enkastela-derive/src/: codegen.rs  lib.rs  parse.rs  validate.rs
crates/enkastela-diesel/: Cargo.toml
crates/enkastela-diesel/src/: lib.rs
crates/enkastela-node/: Cargo.toml
crates/enkastela-node/src/: lib.rs
crates/enkastela-python/: Cargo.toml
crates/enkastela-python/src/: lib.rs
crates/enkastela-sea/: Cargo.toml
crates/enkastela-sea/src/: lib.rs
crates/enkastela-sqlx/: Cargo.toml
crates/enkastela-sqlx/src/: lib.rs
crates/enkastela-test/: Cargo.toml
crates/enkastela-test/src/: lib.rs
crates/enkastela/src/: config.rs  error.rs  lib.rs  vault.rs
crates/enkastela/src/access/: context.rs  mod.rs  policy.rs
crates/enkastela/src/audit/: events.rs  integrity.rs  logger.rs  mod.rs
crates/enkastela/src/blind/: bloom.rs  index.rs  mod.rs  normalize.rs
crates/enkastela/src/compliance/: mod.rs  report.rs
crates/enkastela/src/crypto/: aead.rs  backend.rs  constant_time.rs  hmac.rs  kdf.rs  mod.rs  nonce.rs  ore.rs  secret.rs  siv.rs  stream.rs  wrap.rs
crates/enkastela/src/firewall/: analyzer.rs  mod.rs  policy.rs
crates/enkastela/src/gdpr/: erasure.rs  export.rs  mod.rs
crates/enkastela/src/intrusion/: detector.rs  mod.rs  poison.rs
crates/enkastela/src/keyring/: aws_kms.rs  azure_kv.rs  cache.rs  gcp_kms.rs  hashicorp.rs  hierarchy.rs  manager.rs  mod.rs  provider.rs
crates/enkastela/src/observability/: health.rs  metrics.rs  mod.rs  otel.rs  prometheus.rs
crates/enkastela/src/rotation/: engine.rs  mod.rs  pipeline.rs  progress.rs  strategy.rs
crates/enkastela/src/storage/: codec.rs  migrations.rs  mod.rs  pool.rs  repository.rs
crates/enkastela/src/tenant/: manager.rs
crates/enkastela/src/types/: deterministic.rs  encrypted.rs  encrypted_json.rs  mod.rs  searchable.rs  traits.rs
crates/enkastela/src/validation/: input.rs  mod.rs
crates/enkastela/tests/: bugfix_verification.rs  postgres_integration.rs  proptest_codec.rs  proptest_crypto.rs
dashboards/: grafana-enkastela.json
docs/: threat-model.md
examples/: basic_encrypt.rs  key_derivation.rs  searchable_encryption.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_blind_index.rs  fuzz_decrypt.rs  fuzz_stream_decrypt.rs  fuzz_wire_format.rs
