[workspace]
resolver = "2"
members = [
    "crates/enkastela",
    "crates/enkastela-derive",
    "crates/enkastela-cli",
    "crates/enkastela-test",
    "crates/enkastela-sqlx",
    "crates/enkastela-diesel",
    "crates/enkastela-sea",
]
exclude = [
    "crates/enkastela-python",
    "crates/enkastela-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dickyibrohim/enkastela"
keywords = ["encryption", "postgresql", "security", "gdpr", "field-encryption"]
categories = ["cryptography", "database"]

[workspace.dependencies]
# Crypto (RustCrypto ecosystem, audited)
aes-gcm = "0.10"
aes-siv = "0.7"
aes-kw = "0.2"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.10"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Error handling & logging
thiserror = "2"
tracing = "0.1"

# Concurrent data structures
dashmap = "6"

# Unicode
unicode-normalization = "0.1"

# FIPS backend
aws-lc-rs = { version = "1", features = ["fips"] }

# SQL parsing
sqlparser = "0.61"

# KMS providers (optional)
aws-sdk-kms = "1"
aws-config = "1"
gcp_auth = "0.12"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
azure_security_keyvault_keys = "0.12"
azure_identity = "0.33"
azure_core = "0.33"

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
toml = "1"

# Proc macro
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# ORM integrations
diesel = { version = "2", features = ["postgres"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }

# Observability
prometheus = "0.14"
opentelemetry = "0.28"
opentelemetry_sdk = "0.28"

# Dev / testing
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
proptest = "1"
criterion = { version = "0.8", features = ["async_tokio"] }
tokio-test = "0.4"
trybuild = "1"
tracing-test = "0.2"

# Internal
enkastela = { path = "crates/enkastela" }
enkastela-derive = { path = "crates/enkastela-derive" }
enkastela-test = { path = "crates/enkastela-test" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
lto = "thin"
debug = true
