[package]
name = "enkastela-sqlx"
description = "SQLx integration for Enkastela — transparent field encryption for PostgreSQL queries."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["encryption", "sqlx", "postgresql", "field-encryption"]
categories = ["cryptography", "database"]

[dependencies]
enkastela.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
